# polars-streamlit

./: .gitignore  README.md  analyze_data.py  analyze_data_polars.py  analyze_data_pygwalker.py  analyze_data_stream.py  analyze_fraud_data.py  analyze_hourly_rules.py  analyze_in_chunks.py  benchmark_pandas.py  convert_to_hdf.py  create_test_data.py  data_loader.py  expand_hit_rules.py  fraud_analysis_app.py  main.py  make_parquet.py  prepare_test_data.py  pyproject.toml  read_parquet.py  run_analysis_with_profiler.py  scan_csv_renshu.py  streamlit_app.py  streamlit_duckdb_app.py  streamlit_hdf_app.py  test_partitioned_read.py
tests/: test_convert_to_hdf.py
