[project]
name = "cline-data-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memory-profiler>=0.61.0",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pygwalker>=0.4.9",
    "streamlit>=1.36.0",
    "typer>=0.12.3",
    "plotly>=5.22.0",
    "tables>=3.10.2",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
